Fix layout issues

--- a/docs/Shared/css/shared/header.css
+++ b/docs/Shared/css/shared/header.css
@@ -37,7 +37,7 @@ hr {
     }
 
     hr {
-        display: block;
+        display: inline-block;
         width: 80%;
         margin: 0.5rem 0;
         border: 1px solid #464646;
